# secsgml-rust

./: .gitignore  Cargo.toml  benchmark_results.txt  process_all.sh  readme.md  setup.py
output/: FilingSummary.xml  Financial_Report.xlsx  MetaLinks.json  R1.htm  R10.htm  R100.htm  R101.htm  R102.htm  R103.htm  R104.htm  R105.htm  R106.htm  R107.htm  R108.htm  R109.htm  R11.htm  R110.htm  R111.htm  R112.htm  R113.htm  R114.htm  R115.htm  R116.htm  R117.htm  R118.htm  R119.htm  R12.htm  R120.htm  R121.htm  R122.htm  R123.htm  R124.htm  R125.htm  R126.htm  R127.htm  R128.htm  R129.htm  R13.htm  R130.htm  R131.htm  (+136 more)
secsgml/: Cargo.toml  pyproject.toml
secsgml/src/: benchmark.rs  lib.rs  main.rs  python.rs  sgml_extractor.rs  sgml_parser.rs  uu_decode.rs
secsgml2/: __init__.py  _rust_sgml.cp311-win_amd64.pyd  rust_sgml.py
secsgml2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: byte_parser.rs  io.rs  lib.rs  main.rs  python.rs  sgml.rs  types.rs  utils.rs  uu_decoder.rs
