[package]
name = "sgml_parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "sgml_parser"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # cdylib for Python binding

[dependencies]
uuencode = "0.1.1"  # For UUEncoding/decoding
thiserror = "1.0"   # For error handling
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0"  # For JSON serialization
lazy_static = "1.4.0"  # For static initialization
# Python binding support
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }

[features]
default = ["python"]  # Enable Python by default
python = ["pyo3"]